<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discover">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.example.homestay.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_marked"
        android:name="com.example.homestay.ui.marked.MarkedFragment"
        android:label="@string/title_storage"
        tools:layout="@layout/fragment_marked" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.example.homestay.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.example.homestay.ui.more.MoreFragement"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>