<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/dialog_confirm_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_message"
        android:fontFamily="@font/lora_bold"
        android:textSize="@dimen/_14sdp"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/dialog_confirm_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_confirm_message"
        android:paddingTop="@dimen/_24sdp"
        android:paddingBottom="@dimen/_24sdp">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/dialog_confirm_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/red50_400"
            android:fontFamily="@font/lora_bold"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:elevation="1dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/dialog_confirm_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_weight="1"
            android:fontFamily="@font/lora_bold"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:elevation="1dp"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>